--- a/ro.fasttrackit.university/build.gradle
+++ b/ro.fasttrackit.university/build.gradle
@@ -20,8 +20,14 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.2.23'
     implementation 'org.jetbrains:annotations:22.0.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
-	testImplementation 'org.mockito:mockito-core:3.12.4'
-	testImplementation 'org.mockito:mockito-junit-jupiter:3.12.4'
+	testImplementation 'org.mockito:mockito-core:4.0.0'
+	testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'
+
+	implementation 'io.springfox:springfox-swagger2:3.0.0'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'io.springfox:springfox-spring-web:3.0.0'
+
+	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.5.5'
 }
 
 test {
