--- a/ro.fasttrackit.university/build.gradle
+++ b/ro.fasttrackit.university/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.4'
 	implementation 'org.springframework.data:spring-data-jpa:2.5.4'
-	implementation 'org.postgresql:postgresql:42.2.23'
+	implementation 'org.postgresql:postgresql:42.2.24.jre7'
     implementation 'org.jetbrains:annotations:22.0.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
 	testImplementation 'org.mockito:mockito-core:4.0.0'
@@ -28,6 +28,13 @@ dependencies {
 	implementation 'io.springfox:springfox-spring-web:3.0.0'
 
 	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.5.5'
+
+	implementation 'org.springframework.amqp:spring-amqp:2.3.11'
+	implementation 'org.springframework.amqp:spring-rabbit:2.3.11'
+
+
+
+
 }
 
 test {
